After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659879 - libpeas broken with pygobject 3
libpeas broken with pygobject 3
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
Git master
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
: 660560 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-09-22 21:29 UTC by Ignacio Casal Quinteiro (nacho)
Modified: 2011-09-30 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Revert "Fix refcount bug by not creating python wrapper during gobject init stage" (2.37 KB, patch)
2011-09-22 23:08 UTC, johnp
committed Details | Review
add a floating flag to pygobjects (3.66 KB, patch)
2011-09-22 23:08 UTC, johnp
committed Details | Review
when checking instances union members are same type as parent (3.72 KB, patch)
2011-09-22 23:08 UTC, johnp
committed Details | Review

Description Ignacio Casal Quinteiro (nacho) 2011-09-22 21:29:08 UTC
there is a problem with latest pygobject making it to not call init method of the python objects.

Also it is not dealing correctly with Gdk.Event types as we get a warning in gedit saying that it is not able to convert Gdk.EventKey to Gdk.Event.
Comment 1 johnp 2011-09-22 23:08:41 UTC
Created attachment 197300 [details] [review]
Revert "Fix refcount bug by not creating python wrapper during gobject init stage"

This reverts commit f6fa5dd8f39af1b8a52d7600d257400b0983e8c5.
Comment 2 johnp 2011-09-22 23:08:48 UTC
Created attachment 197301 [details] [review]
add a floating flag to pygobjects

* this allows us to correctly refcount when custom gobjects are instantiated
  via g_object_new
Comment 3 johnp 2011-09-22 23:08:55 UTC
Created attachment 197302 [details] [review]
when checking instances union members are same type as parent

* this is so we can support sending Gdk.Event members in place of
  the Event union into methods
* we only support this if the union member has a type of GI_INTERFACE for now
Comment 4 johnp 2011-09-22 23:11:41 UTC
These patches fix the issues.  The first two were committed already - woops, I should have gotten release team acks.  Requesting release team acks for these three patches so I can roll another tarball.
Comment 5 Ignacio Casal Quinteiro (nacho) 2011-09-23 16:22:58 UTC
Everything works as expected with me with these patches. Thanks a lot.
Comment 6 Ignacio Casal Quinteiro (nacho) 2011-09-30 12:57:29 UTC
*** Bug 660560 has been marked as a duplicate of this bug. ***
Comment 7 Ignacio Casal Quinteiro (nacho) 2011-09-30 20:24:50 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.