when checking instances union members are same type as parent

* this is so we can support sending Gdk.Event members in place of
  the Event union into methods
* we only support this if the union member has a type of GI_INTERFACE for now

https://bugzilla.gnome.org/show_bug.cgi?id=659879